Mascot page added and homepage changes for more sweet text content. (501c success) preview page removed, version bumped and sitemap updated
TODO: responsive image resizing and navigation header resizing.

--- a/index.html
+++ b/index.html
@@ -34,30 +34,46 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" rel="#" title="Studio Cosplay" href="#"><img height="41" id="studio-cosplay-logo" src="img/studio-cosplay-logo.jpg" /></a>
+            <a class="navbar-brand" rel="#" title="Studio Cosplay" href="#"><img height="41" id="studio-cosplay-logo" src="img/studio-cosplay-logo.png" /></a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#ourMission">Our Mission</a></li>
-                <li><a href="#meetOurTeam">Meet Our Team</a></li>
+                <li><a href="#ourMission">What We Do</a></li>
+                <li><a href="#meetOurTeam">Our Story</a></li>
+                <li><a href="mascot-contest.html">MASCOT Contest</a></li>
                 <li><a href="#contactUs">Contact Us</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </div>
 
-    <div id="home" class="carousel slide" >
+    <div id="home" class="carousel slide" data-ride="carousel" >
         <div class="carousel-inner">
+            <img src="img/parade.png" alt="A Parade in Celebration!" />
             <div class="item active">
-                <div class="overflow-active">
-                    <img src="img/parade.png" alt="A Parade in Celebration!" />
-                </div>
                 <div class="container">
                     <div class="carousel-caption ">
                         <h1>Hooray!</h1>
-                        <p>We have submitted our 501(c)(3) filing with the help of Floyd Green Financial Services based out of Atlanta. We expect the filing status to take between six and eight weeks to complete. We will continue to work during this time to prepare for our Kickstarter and accept feedback from the community.</p>
-                        <p>There are a lot of good things out of Atlanta, like Dragon*Con!</p>
+                        <p>We are officially a 501(c)(3) non-profit organization and all donations are tax deductible.</p>
+                        <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=52HTX9WFZX38W" target="_blank">Click here to donate today!</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="container">
+                    <div class="carousel-caption ">
+                        <h1>We have a NEW logo!</h1>
+                        <p>A big thank you to independent game developer Frogdice for lending their Graphic Designer to create our official logo.</p>
+                        <p>Check them out at <a href="http://frogdice.com" target="_blank">frogdice.com</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="container">
+                    <div class="carousel-caption ">
+                        <h1>MASCOT CONTEST!</h1>
+                        <p>Help us design our mascot and win a $100 gift card to Amazon.com. See official rules <a href="mascot-contest.html">here</a>.</p>
                     </div>
                 </div>
             </div>
@@ -69,12 +85,11 @@
         <div class="container">  
             <div class="row"> 
                 <div class="inner">
-                    <h1>Studio Cosplay</h1><br />
-                    <p>Studio Cosplay is a non-profit organization (501(c)(3) status pending) located in the DC metro area that will be offering a studio makerspace in 2015 to cosplayers who need a place to work on their projects. We will provide various costume and prop-making equipment and will offer green screen space to photographers who would like to come in and work with cosplayers. Member subscription tiers will be available for use of the workshop.</p>
-                    <p>We are currently scouting locations, creating our budget, and obtaining our 501(c)(3) status.</p>
-                    <p style="font-size: 25px;">Check back on our website or like us on Facebook for updates on our status. And, watch for our Kickstarter in February 2015 or donate today!</p>
+<p>Studio Cosplay is a 501(c)(3) nonprofit organization located in the DC metro area whose mission  is to promote community through the art of costuming by providing workspace, opportunity, and education. Studio Cosplay is opening a community-operated workshop in 2015 where cosplayers can connect and exchange ideas, share resources and knowledge, collaborate on projects, take instructional classes and hands-on workshops, and have the space and tools to work on costumes. Our workshop will be based in the DC metro area and will welcome all cosplayers, costume designers, LARPers, photographers, artists, and anyone interested in learning about costuming.</p>
+
+                    <p class="intro">Show your support and spread the word! Like us on Facebook for updates on our status and watch for our Kickstarter in early 2015 or donate today!</p>
                     <br />
-                    <p><a href="#blogSection" class="btn btn-large btn-primary">WATCH FOR OUR KICKSTARTER</a></p>
+<iframe id="fb-iframe" seamless src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fstudiocosplay&width&layout=button&action=like&show_faces=true&share=true&height=80&appId=2345574733"></iframe>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="52HTX9WFZX38W">
@@ -89,28 +104,27 @@
     <div id="ourMission">
         <div class="container">
             <div class="row">
-                <h1>Our Mission</h1>
-                <p>Studio Cosplay promotes community through the art of costuming by providing workspace, opportunity, and education.</p>
+                <h1>Studio Cosplay is by cosplayers and for cosplayers</h1>
                 <div class="col-md-4">
                     <div class="info-img">
                         <object type="image/svg+xml" data="img/studio.svg"></object>
                     </div>
                     <h2>Studio</h2>
-                    <p>Physical creation space offering equipment and supplies for crafting cosplay, available for the DC area.</p>
+                    <p>We aim to provide a physical space around the DC area for our members to have access to equipment such as sewing machines, sergers, airbrushes, 3D printers, heat guns/knives, etc. for cosplay creation and a green screen for photography.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="info-img">
                         <object type="image/svg+xml" data="img/repair.svg"></object>
                     </div>
                     <h2>Repair</h2>
-                    <p>Sanctum for on-site cosplay repairs, available at major cosplay conventions.</p>
+                    <p>Our convention booths will be stocked with cosplay essentials like sewing notions, paints, adhesives, molding materials, etc. and will be available to our members for touchups and repairs.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="info-img">
                         <object type="image/svg+xml" data="img/instruction.svg"></object>
                     </div>
                     <h2>Instruction</h2>
-                    <p>Workshops to expand your costuming skills.</p>
+                    <p>We seek to share and expand our cosplay knowledge by offering instructional classes and hands-on workshops on a variety of costuming aspects including sewing, wig styling, prop making, armour, and photography.</p>
                 </div>
             </div>
         </div>
@@ -121,14 +135,11 @@
             <div class="row">
                 <div class="inner">
                     <h1>Watch for our Kickstarter</h1><br />
-                    <p style="font-size: 25px;">
-Our Kickstarter campaign will launch Feb 2015 with the goal of raising enough money to cover first year’s expenses; including the physical space (rent, utilities, etc.), equipment (machines, tools, furniture, etc.), security / safety (site access, respirators, etc.), and administrative costs (website, insurance, Kickstarter rewards, etc.).
+                    <p class="intro">
+                    Our Kickstarter campaign is targeted to launch February 2015 to cover first year’s expenses; including the physical space (rent, utilities, etc.), equipment (machines, tools, furniture, etc.), security / safety (site access, respirators, etc.), and administrative costs (website, insurance, Kickstarter rewards, etc.).
                     </p>
-                    <p>
-We aim to provide a physical space around the DC area for our members to have access to equipment such as sewing machines, sergers, airbrushes, heat guns/knives, 3D printers (funding dependent), vacuum form machines (funding dependent), etc. for cosplay creation and a green screen for photography. Membership for this maker space will be open to all: cosplayers, photographers, artists, LARPers, and anyone interested in costuming.
-                    </p>
-                    <p>
-We seek to provide a space for collaboration and learning; where cosplayers can connect and exchange ideas or take instructional classes and hands-on workshops on a variety of costuming aspects like sewing, wig styling, prop making, armour, and photography.
+                    <p class="intro">
+                    We have a long wish list and many stretch goals, including a classroom area, sewing stations, airbrush and painting stations, fabrication stations with a 3D printer, and green screen for a photography area.
                     </p>
                     <p> 
 Currently, we are only accepting monetary donations. Once we have a physical space, we will gladly accept equipment, fabric, notions, and anything else you’d like to share with the community!
@@ -149,8 +160,13 @@ Currently, we are only accepting monetary donations. Once we have a physical spa
 <div class="container">
     <div class="row">
         <div class="col-md-12 cntr">
-            <h1>Meet Our Team</h1>
-            <p>These are the people dedicated to bringing you Studio Cosplay.</p>
+            <h1>Our Story</h1>
+<p>
+The idea for Studio Cosplay originated from our own need for more workspace and specialized equipment, and we recognize that many in the cosplay community face the same challenges.  The average cosplayer may not have access to embroidery machines and 3D printers. But as a community, we can acquire and share these resources.
+</p>
+<p>
+We founded Studio Cosplay because our creations should only be limited by imagination; not by logistics or lack of knowledge. Meet the people dedicated to bringing you Studio Cosplay:
+</p>
             <br />
         </div>
     </div>
@@ -174,7 +190,7 @@ Currently, we are only accepting monetary donations. Once we have a physical spa
 <p>
 Liz Gmaz is an actress and cosplayer in the DC Metro Area and brings stage and film experience, as well as combat and stunt experience, to convention panels to help educate in posing, makeup, gun discipline, and more. She has been a costume designer for over six years and is a one of the Founders of Studio Cosplay. She’s an avid Podcaster and Marvel Funko Pop Collector. Liz has been featured on multiple media outlets for her Cosplay work and has appeared on many popular TV shows, including House of Cards.
 </p>
-            <a class="facebook" href="https://www.facebook.com/LizGmaz"></a>
+            <a class="facebook" href="https://www.facebook.com/StudioEingana"></a>
             <a class="twitter" href="https://twitter.com/LizGmaz"></a>
         </div>
     </div>
@@ -193,7 +209,7 @@ Liz Gmaz is an actress and cosplayer in the DC Metro Area and brings stage and f
             </div>
         </div>
         <div class="col-md-8 col-md-pull-4">
-            <h4>Sabrina Maizland</h4>
+            <h4>Sabrina (Katilist) Maizland</h4>
             <h5>Vice President &amp; Treasurer</h5>
 <p>
 Sabrina Maizland has been cosplaying for five years and her Emma Frost has been featured on the front page of CNN.com. She is a Founder of Studio Cosplay and has been a panelist at many conventions, including San Diego Comic Con, Pheonix Comicon, and Dragon*Con. Her Worbla safety tutorial is published on Worbla.com and she is sponsored Cosplayer by Indie game developer FrogDice. Sabrina was also the Set Designer for the charity film “Browncoat Redemption,” which was endorsed by Joss Whedon.
