Added Google Sitemaster meta tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Studio Cosplay is a non-profit in the DC metro Area that promotes community through the art of costuming by providing workspace, opportunity and education.">
     <meta name="author" content="Studio Cosplay">
     <meta name="keywords" content="Studio Cosplay, Makerspace, Maryland, Cosplay Workshop, Cosplay Commmunity, Mobile Cosplay Support, Kickstarter, Worbla, Costume, Costuming, Wig styling, Comic Book, Prop Making, Projects, Photography, Green Screen, Cosplayer, Liz Gmaz, Sabrina Maizland, Daria Medved, Stefanie Hackenberg">
+    <meta name="google-site-verification" content="JG5wqGPBeqN-NtPViiI2pT4UCEjLcU4ygDokq9ky7GU" />
     <link rel="icon" href="img/favicon.ico">
 
     <title>Studio Cosplay</title>
