Added mailing list form to homepage

--- a/index.html
+++ b/index.html
@@ -81,13 +81,46 @@
         </div>
     </div>
 
-
     <div id="studioCosplay">     
         <div class="container">  
             <div class="row"> 
-                <div class="inner">
-<p>Studio Cosplay is a 501(c)(3) nonprofit organization located in the DC metro area whose mission  is to promote community through the art of costuming by providing workspace, opportunity, and education. Studio Cosplay is opening a community-operated workshop in 2015 where cosplayers can connect and exchange ideas, share resources and knowledge, collaborate on projects, take instructional classes and hands-on workshops, and have the space and tools to work on costumes. Our workshop will be based in the DC metro area and will welcome all cosplayers, costume designers, LARPers, photographers, artists, and anyone interested in learning about costuming.</p>
-
+                <div class="col-md-12">
+                <p>Studio Cosplay is a 501(c)(3) nonprofit organization located in the DC metro area whose mission  is to promote community through the art of costuming by providing workspace, opportunity, and education. Studio Cosplay is opening a community-operated workshop in 2015 where cosplayers can connect and exchange ideas, share resources and knowledge, collaborate on projects, take instructional classes and hands-on workshops, and have the space and tools to work on costumes. Our workshop will be based in the DC metro area and will welcome all cosplayers, costume designers, LARPers, photographers, artists, and anyone interested in learning about costuming.</p>
+                <h1>Tell Me More!</h1>
+                </div>
+                <div class="col-md-3"></div><div class="col-md-6">
+                <form id="mailing-list-form" role="form" action="https://docs.google.com/forms/d/1lRJ6ktsDnMhwPFuH5bCg_sRJfvULYftTgso7osCxrNU/formResponse" method="POST">
+                    <div class="form-group row">
+                        <div class="col-xs-5 col-sm-7 text-left">
+                            <label for="entry_309242874">Email Address:</label>
+                        </div>
+                        <div class="col-xs-7 col-sm-5">
+                            <input type="email" class="form-control" id="entry_309242874" name="entry.309242874" placeholder="email@domain.com" required>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-xs-10 col-sm-7 text-left">
+                            <label for="group_2101776408_1">Updates on Studio Cosplay progress:</label>
+                        </div>
+                        <div class="col-xs-2  col-sm-5">
+                            <input type="checkbox" name="entry.2101776408" value="Updates on Studio Cosplay progress" id="group_2101776408_1" role="checkbox" class="ss-q-checkbox">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-xs-10 col-sm-7 text-left">
+                            <label for="group_2101776408_2">Opportunities to help out:</label>
+                        </div>
+                        <div class="col-xs-2  col-sm-5">
+                            <input type="checkbox" name="entry.2101776408" value="Opportunities to help out" id="group_2101776408_2" role="checkbox" class="ss-q-checkbox">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <button type="submit" name="submit" id="ss-submit" class="btn btn-large btn-primary">Sign Me Up! &nbsp;&#94;&#95;&#94;</button>
+                    </div>
+                </form>
+                </div><div class="col-md-3"></div>
+                <div class="col-md-12">
+                    <br />
                     <p class="intro">Show your support and spread the word! Like us on Facebook for updates on our status and watch for our Kickstarter in early 2015 or donate today!</p>
                     <br />
 <iframe id="fb-iframe" seamless src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fstudiocosplay&width&layout=button&action=like&show_faces=true&share=true&height=80&appId=2345574733"></iframe>
@@ -97,7 +130,7 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-                </div> 
+                </div>
             </div> 
         </div> 
     </div> 
