New Studio Cosplay homepage with better svgs and flexbox
new profile pics (except daria-norm) with 70% width in mobile, removed top margin on profiles
added the new .svg carousel background images
readjusted breakpoints to take into account iphone 6plus
utilized flex-box for all vertical centering - it is awesome.

references:
http://viewportsizes.com/?filter=iphon
http://css-tricks.com/snippets/css/a-guide-to-flexbox/
http://stackoverflow.com/questions/17213113/vertical-centering-flexbox-overlay-in-ios-safari

--- a/preview.html
+++ b/preview.html
@@ -21,7 +21,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/preview-style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -214,10 +214,10 @@ We founded Studio Cosplay because our creations should only be limited by imagin
             <div id="liz-profile" class="slide vertical" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <object class="profile" type="image/svg+xml" data="img/liz-profile.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/liz-profile2.svg"></object>
                     </div>
                     <div class="item">
-                        <object class="profile" type="image/svg+xml" data="img/liz-cosplay.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/liz-cosplay2.svg"></object>
                     </div>
                 </div>
             </div>
@@ -238,10 +238,10 @@ Liz Gmaz is an actress and cosplayer in the DC Metro Area and brings stage and f
             <div id="daria-profile" class="slide vertical" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <object class="profile" type="image/svg+xml" data="img/sabrina-profile.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/sabrina-profile2.svg"></object>
                     </div>
                     <div class="item">
-                        <object class="profile" type="image/svg+xml" data="img/sabrina-cosplay.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/sabrina-cosplay2.svg"></object>
                     </div>
                 </div>
             </div>
@@ -262,10 +262,10 @@ Sabrina Maizland has been cosplaying for five years and her Emma Frost has been 
             <div id="daria-profile" class="slide vertical" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <object class="profile" type="image/svg+xml" data="img/daria-profile.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/daria-profile2.svg"></object>
                     </div>
                     <div class="item">
-                        <object class="profile" type="image/svg+xml" data="img/daria-cosplay.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/daria-cosplay2.svg"></object>
                     </div>
                 </div>
             </div>
@@ -286,10 +286,10 @@ Daria Medved is a Founder of Studio Cosplay with over 20 years of costuming expe
             <div id="stef-profile" class="slide vertical" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <object class="profile" type="image/svg+xml" data="img/stef-profile.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/stef-profile2.svg"></object>
                     </div>
                     <div class="item">
-                        <object class="profile" type="image/svg+xml" data="img/stef-cosplay.svg"></object>
+                        <object class="profile" type="image/svg+xml" data="img/stef-cosplay2.svg"></object>
                     </div>
                 </div>
             </div>
