--- a/preview.html
+++ b/preview.html
@@ -21,7 +21,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/preview-style.css" rel="stylesheet">
 </head>
 <body>
 
